# COC-AI-kp

./: .env.example  .gitignore  LICENSE  README.md  TASK_PROGRESS.md  agent.md  package.json  克苏鲁的呼唤第七版调查员手册1.16.docx
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_enable_pgvector.py
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py
backend/app/api/: __init__.py  chat.py
backend/app/llm/: __init__.py  deepseek.py
backend/app/models/: __init__.py
backend/app/rag/: __init__.py
backend/app/schemas/: __init__.py  chat.py  sse.py
backend/app/tools/: __init__.py
deploy/: docker-compose.yml
docs/: PLAN.md
frontend/: nuxt.config.ts  package-lock.json  package.json
frontend/components/chat/: AgentSteps.vue  DiceRoll.vue  MessageList.vue
frontend/composables/: useAgentStream.ts  useCharacter.ts
frontend/layouts/: default.vue
frontend/pages/: index.vue
frontend/plugins/: naive-ui.ts
frontend/types/: agent-events.ts
scripts/: dev.bat  dev.ps1  run-backend.mjs  start-edge-debug.bat
